2011-02-08  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Fix after r77874, m_isConnected is initialized before the
        socket is opened
        https://bugs.webkit.org/show_bug.cgi?id=54011

        Fixed connection breakage after r77874, we have to wait until open
        the socket to open the connection.

        * Platform/CoreIPC/gtk/ConnectionGtk.cpp:
        (CoreIPC::Connection::platformInitialize):
        (CoreIPC::Connection::open):

2011-02-08  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.

        [WK2] LayerTreeContext is used outside the ACCELERATED_COMPOSITING
        guards but not defined in DrawingAreaProxy.h
        https://bugs.webkit.org/show_bug.cgi?id=54009

        Removed the guards in the forward declaration, this will fail if
        the class is finally used in the function, but it works for the
        moment.

        * UIProcess/DrawingAreaProxy.h:

2011-02-08  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.

        WebKit2 GTK Fails to Build #include nested too deeply
        https://bugs.webkit.org/show_bug.cgi?id=52219

        * GNUmakefile.am: Removed the commands to create the directories
        for the forwarding headers, the script already does it for us.
        * config.h: Removed the config.h inclusion and added the
        autotoolsconfig.h directly, also added a condition to share the
        defines with QT.

2011-02-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        Crash when going back/forward when back/forward list is in a bad state.
        https://bugs.webkit.org/show_bug.cgi?id=54059
        <rdar://problem/8975244>
        
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::goForward): Add a null check.
        (WebKit::WebPageProxy::goBack): ditto

2011-02-08  Anders Carlsson  <andersca@apple.com>

        Reviewed by Beth Dakin.
