@@ -2,6 +2,15 @@
 
         Reviewed by Martin Robinson.
 
+        Fix typo in the include guards name in ChunkedUpdateDrawingAreaProxy.h
+        https://bugs.webkit.org/show_bug.cgi?id=54013
+
+        * UIProcess/ChunkedUpdateDrawingAreaProxy.h:
+
+2011-02-08  Alejandro G. Castro  <alex@igalia.com>
+
+        Reviewed by Martin Robinson.
+
         [GTK] Fix after r77874, m_isConnected is initialized before the
         socket is opened
         https://bugs.webkit.org/show_bug.cgi?id=54011
